# AdvancedFernetDataEncryption

./: AdvancedFernetDataEncryption.py  README.md  __init__.py  pyproject.toml
.github/workflows/: python-publish.yml
test/: test_encryption.py
